# rag-agent-audit

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  package.yml  publish-pypi.yml  publish-testpypi.yml
docs/: release.md
examples/agent-tool-policy/: README.md  audit.failures.yaml  audit.pass.yaml
examples/basic/: audit.yaml
examples/flowise/: README.md  audit.yaml
examples/http-endpoint/: audit.yaml  mock_server.py
examples/multi-tenant-rag/: README.md  audit.yaml
examples/multi-tenant-rag/corpus/: malicious_vendor_policy.md  org_a_employee_handbook.md  org_a_refund_policy.md  org_b_compensation_policy.md  (+1 more)
examples/prompt-injection/: README.md  audit.yaml
examples/traces/: README.md  langfuse-traces.jsonl  otel-traces.jsonl
src/rag_agent_audit/: __init__.py  cli.py  config.py  corpus.py  corpus_generate.py  init_command.py  inspect_command.py  normalizer.py  result.py  runner.py  templates.py  trace_import.py
tests/: conftest.py  test_citation_checks.py  test_cli.py  test_config.py  test_corpus.py  test_corpus_generate.py  test_diagnostics.py  test_fallback.py  test_github_summary.py  test_init_command.py  test_inspect_command.py  test_junit_report.py  test_known_sources.py  test_normalizer.py  test_runner_mock.py  test_tenant_leakage.py  test_terminal_report.py  test_text_rules.py  test_tool_calls.py  test_tool_policy.py  test_trace_import.py
(+23 files in other folders)
