[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[project]
name = "rag-agent-audit"
version = "0.3.0"
description = "CI security regression testing for RAG apps and AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "jsonpath-ng>=1.6.0",
    "rich>=13.0.0",
]

[project.scripts]
rag-agent-audit = "rag_agent_audit.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "build>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent_audit"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Prevent pytest from trying to collect Pydantic's TestCase model as a test class
python_classes = ["Test", "Spec"]
